2006-12-15  Ulrich Weigand  <uweigand@de.ibm.com>

	* configure.tgt (NATIVE_LIB_DIRS): Specify for spu-*-elf*.

2006-12-12  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am (ld_TEXINFOS): Set.
	(ld.info ld.dvi ld.html): Delete rule.
	* Makefile.in: Regenerated.

2006-12-12  Ina Pandit  <inap@kpitcummins.com>

	* ldlang.c (print_output_section_statement): Print load address
	when lma differs from vma.

2006-12-11  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure.in: Define GENINSRC_NEVER.
	* doc/Makefile.am (ld.info): Remove srcdir prefix.
	(MAINTAINERCLEANFILES): Add info file.
	(DISTCLEANFILES): Pretend to add info file.
	* po/Make-in (.po.gmo): Put gmo files in objdir.
	* configure, Makefile.in: Regenerated.

2006-12-04  Jan Beulich  <jbeulich@novell.com>

	* emultempl/elf32.em (gld${EMULATION_NAME}_after_open): Create
	.eh_frame_hdr section here.

2006-11-27  Ian Lance Taylor  <ian@airs.com>

	* Makefile.am (EXTRA_DIST): Put spu_ovl.o in the emultempl
	subdirectory.
	* Makefile.in: Regenerate.

2006-11-27  Bob Wilson  <bob.wilson@acm.org>

	* emultempl/xtensaelf.em (XSHAL_ABI): Add default definition.
	(replace_insn_sec_with_prop_sec): Use bfd_make_section_with_flags.
	Delete redundant code to set sections flags and alignment.
	(xt_config_info_unpack_and_check, check_xtensa_info): New.
	(elf_xtensa_after_open): Iterate over input statements instead of
	link_info.input_bfds.
	(elf_xtensa_before_allocation): Likewise.  Call check_xtensa_info for
	each input, and write a new .xtensa.info section in the output.

2006-11-22  Nick Clifton  <nickc@redhat.com>

	* configure.in (LINGUAS): Add ga.
	* po/ga.po: New Irish translation.

2006-11-20  H.J. Lu  <hongjiu.lu@intel.com>

	* ld.texinfo: Fix a typo.

2006-11-20  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/elf32_spu.sh (OTHER_SECTIONS): Define.

2006-11-13  Daniel Jacobowitz  <dan@codesourcery.com>

	* emultempl/armelf.em (arm_elf_before_allocation): Only call