@@ -1,3 +1,9 @@
+2006-12-18  Pedro Alves  <pedro_alves@portugalmail.pt>
+
+	* ld-pe/direct.exp: New file.
+	* ld-pe/direct_client.c: Likewise.
+	* ld-pe/direct_dll.c: Likewise.
+
 2006-12-13  Dave Brolley  <brolley@redhat.com>
 
 	* lib/ld-lib.exp (big_or_little_endian): Accept -meb and
